deployments/openshift/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ovsdpdk-webhook
  namespace: dra-driver-ovsdpdk
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: ovsdpdk-webhook-certs
spec:
  selector:
    app: ovsdpdk-webhook
  ports:
    - name: webhook
      port: 443
      targetPort: 9443
